<mark> is not exposed as AXHighlight to VoiceOver
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox135 | --- | verified |
People
(Reporter: morgan, Assigned: Jamie)
References
(Blocks 2 open bugs)
Details
Attachments
(1 file)
STR:
- Enable VoiceOver
- Load
data:text/html,other text <mark>hello world</mark> other text - Move the VO cursor to the marked region
- Press VO+T to hear the text formatting information
Expected:
VO says "Highlighted, 16pt, Times, Black on Yellow"
Actual:
VO says: "16pt, Times, Black on Yellow"
Safari announces "Highlighted" correctly. I think we should support AXHighlight the way we do here, for text fragments. At quick glance, I'm not sure why this isn't applied to all marks
| Assignee | ||
Comment 1•1 year ago
|
||
This should also work for role="mark", but <mark> is mapped to the same role, so as long as we do this based on role, we're good.
On other platforms, mark was originally a role, before we had the text attribute. The text attribute was added so it can span partial elements for text fragments and CSS custom highlights. For that reason, we can't expose the mark role as a text attribute (because then we'd be doubling up), but we do need to map it to AXHighlight in the Mac code.
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Comment 2•1 year ago
|
||
Updated•1 year ago
|
Comment 5•1 year ago
|
||
I can reproduce this issue in Release v134.0.1 on MacOS11.7.10 Intel and on MacOS 14.7.1 aarch64.
I can verify the fix in Beta v135.0b5 and Nightly v136.0a1 on MacOS 14.7.1 aarch64 ("highlighted, 16 point Times, black on yellow"), but not on the older MacOS11.7.10 Intel ("16 point Times, black on yellow").
Which MacOS versions should this fix apply to? How would you like to address it? Thanks.
Comment 6•1 year ago
|
||
:morgan, can you help me with the request above instead? Thanks.
| Reporter | ||
Comment 7•1 year ago
|
||
(In reply to Daniel Bodea [:danibodea] from comment #5)
I can reproduce this issue in Release v134.0.1 on MacOS11.7.10 Intel and on MacOS 14.7.1 aarch64.
I can verify the fix in Beta v135.0b5 and Nightly v136.0a1 on MacOS 14.7.1 aarch64 ("highlighted, 16 point Times, black on yellow"), but not on the older MacOS11.7.10 Intel ("16 point Times, black on yellow").Which MacOS versions should this fix apply to? How would you like to address it? Thanks.
Hmmm I think 14+ is okay; Jamie and I noticed different behaviour across different OS versions when we were testing, but didn't narrow down why that variation was occurring or if there was anything we could do about it.
As long as we have something working in current macOS, I'm not too concerned with older versions.
Comment 8•1 year ago
|
||
Thank you for your response! I will be closing this report based on the last 3 comments.
Please let me know if you need me to log a new issue for the remaining situation.
Description
•