Bug 1932980: Expose <mark> as AXHighlight for Mac a11y. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D230353