accessible/tests/browser/mac/browser_attributed_text.js
@@ -190,3 +190,29 @@ addAccessibleTask(
   },
   { urlSuffix: "#:~:text=test" }
 );
+
+// Test the <mark> element.
+addAccessibleTask(
+  `This is a <mark>test</mark>.`,
+  async function testMark(browser, accDoc) {
+    const macDoc = accDoc.nativeInterface.QueryInterface(
+      Ci.nsIAccessibleMacInterface
+    );
+    const range = macDoc.getParameterizedAttributeValue(
+      "AXTextMarkerRangeForUnorderedTextMarkers",
+      [
+        macDoc.getAttributeValue("AXStartTextMarker"),
+        macDoc.getAttributeValue("AXEndTextMarker"),
+      ]
+    );
+    const attributedText = macDoc.getParameterizedAttributeValue(
+      "AXAttributedStringForTextMarkerRange",
+      range
+    );
+    is(attributedText.length, 3);
+    ok(!attributedText[0].AXHighlight);
+    ok(attributedText[1].AXHighlight);
+    is(attributedText[1].string, "test");
+    ok(!attributedText[2].AXHighlight);
+  }
+);
